--- a/assets/scss/custom/_sidebar.scss
+++ b/assets/scss/custom/_sidebar.scss
@@ -184,7 +184,7 @@
 		img {
 			width: 20px;
 			position: absolute;
-			top: 12.5px;
+			top: 10px;
 			left: 12.5px;
 		}
 
